# Twevals

./: .gitignore  BUG_DIAGNOSIS.md  CHANGELOG.md  CLAUDE_PLAN.md  CODEX_PLAN.md  EXPERIENCE_SPEC_CLAUDE.md  EXPERIENCE_SPEC_CLI.md  EXPERIENCE_SPEC_PYTHON.md  EXPERIENCE_SPEC_WEBUI.md  ISSUES.md  PLAN.md  README.md  pyproject.toml  test.json
.claude/commands/: deslop.md  ship.md
.github/workflows/: publish.yml
.spec/: EXPERIENCE_SPEC.md  EXPERIENCE_SPEC_CLI.md  EXPERIENCE_SPEC_PYTHON.md  EXPERIENCE_SPEC_WEBUI.md
docs/: installation.mdx  introduction.mdx  mint.json  quickstart.mdx  setup.mdx
docs/api-reference/: cli.mdx  eval-result.mdx  http-api.mdx  score.mdx
docs/core-concepts/: decorators.mdx  eval-context.mdx  parametrize.mdx  scoring.mdx
docs/examples/: granular-evals.mdx  rag-agent.mdx
docs/guides/: evaluators.mdx  file-defaults.mdx  patterns.mdx  sessions.mdx  web-ui.mdx
evalkit/: README.md  __init__.py  cli.py  decorators.py  discovery.py  formatters.py  parametrize.py  runner.py  schemas.py
examples/: context_demo.py  demo_context.py  demo_eval.py  demo_eval_next.py  demo_eval_paramatrize.py  demo_file_defaults.py  demo_trace_data.py  demo_verbose.py  new_demo.py  slow_latency.py
ezvals/: cli.py  decorators.py  discovery.py  export.py  runner.py
ezvals/server/: __init__.py
ezvals/static/: detail.js  index.css  index.js
ezvals/templates/: index.html
tests/e2e/: test_comparison_mode.py  test_filters.py  test_full_scenario.py  test_rename_run.py  test_run_controls.py  test_stats_bar.py  test_ui_fixes.py  test_ui_interactions.py
tests/fixtures/: test_eval_file.py
tests/integration/: test_context_integration.py  test_full_workflow.py  test_server_json_flow.py
tests/unit/: test_cli.py  test_cli_concurrency_output.py  test_cli_progress.py  (+13 more)
twevals/: README.md  __init__.py  cli.py  config.py  context.py  decorators.py  discovery.py  formatters.py  parametrize.py  run_manager.py  runner.py  schemas.py  storage.py
(+13 files in other folders)
