[tool.poetry]
name = "evalkit"
version = "0.1.0"
description = "A lightweight, code-first evaluation framework for testing AI agents and LLM applications"
authors = ["EvalKit Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.7"
click = "^8.1.0"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.12.9"

[tool.poetry.scripts]
evalkit = "evalkit.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
